--- a/frontend/src/components/apis/Youtube/Youtube.scss
+++ b/frontend/src/components/apis/Youtube/Youtube.scss
@@ -44,13 +44,13 @@
   height: 2.3em;
   text-align: center;
 }
-
 .youtube-video {
   iframe {
-    width: 100vw;
-    height: 50vh;
+    width: inherit;
+    flex-grow: 1;
   }
 }
+
 /* Tablet CSS */
 @media only screen and (min-width: 768px) {
   .youtube-video {
@@ -77,9 +77,9 @@
   }
 
   .youtube-video {
-    width: inherit;
     iframe {
       width: inherit;
+      flex-grow: 1;
     }
   }
 }
